# pixl

./: .gitignore  Cargo.toml  DESIGN.md  README.md  justfile  pixl.example.toml
.github/workflows/: ci.yml
bake/: README.md
crates/pixl/: Cargo.toml  README.md
crates/pixl-gen/: Cargo.toml
crates/pixl-gen/src/: device.rs  lib.rs  lora.rs  sdxl.rs
crates/pixl-pixelize/: Cargo.toml
crates/pixl-pixelize/src/: collapse.rs  color.rs  grid.rs  lib.rs  palette.rs  signal.rs
crates/pixl-pixelize/tests/: golden.rs
crates/pixl/examples/: demo_fixture.rs
crates/pixl/src/: cli.rs  main.rs
crates/pixl/src/tui/: actor.rs  gallery.rs  mod.rs
