[workspace]
resolver = "2"
members = ["crates/pixl-pixelize", "crates/pixl-gen", "crates/pixl"]

[workspace.package]
version = "0.1.13"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/flow-industries/pixl"
rust-version = "1.85"

[workspace.dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rayon = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
pixl-pixelize = { path = "crates/pixl-pixelize", version = "0.1.13" }
pixl-gen = { path = "crates/pixl-gen", version = "0.1.13" }

# The pixelize hot loops benefit from LTO; keep the release binary small.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
