[package]
name = "pixl-gen"
description = "Local diffusion image generation backend (SDXL + LoRA on candle/Metal). Trait-decoupled from the CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
image.workspace = true
thiserror.workspace = true

# The candle/Metal backend is behind the `metal` feature (default off) so the
# trait + types compile everywhere (incl. Linux CI); enable it on macOS to build
# the real generator: `cargo build --features metal`.
candle-core = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
hf-hub = { version = "0.5", optional = true, features = ["ureq"] }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
anyhow = { workspace = true, optional = true }

[features]
metal = [
    "dep:candle-core", "dep:candle-nn", "dep:candle-transformers",
    "dep:hf-hub", "dep:tokenizers", "dep:anyhow",
    "candle-core/metal", "candle-core/accelerate",
    "candle-nn/metal", "candle-transformers/metal",
]
