[package]
name = "pixl"
description = "Local pixel-art generator for Apple Silicon: SDXL + pixel-art LoRA, snapped to true pixel art."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "pixl"
path = "src/main.rs"

[features]
# Build the candle/Metal generation backend (macOS) + its progress/pipeline deps.
gen = ["pixl-gen/gen", "dep:indicatif", "dep:crossbeam-channel", "dep:ctrlc", "dep:serde_json"]
cuda = ["gen", "pixl-gen/cuda"]
metal = ["gen"]

[dependencies]
pixl-pixelize.workspace = true
pixl-gen.workspace = true
image.workspace = true
rayon.workspace = true
clap.workspace = true
anyhow.workspace = true
indicatif = { version = "0.18", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
ctrlc = { version = "3", optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
