[package]
name = "flow-pixl"
description = "Local pixel-art generator: SDXL + a pixel-art LoRA, snapped to true pixel art (Metal/CUDA/CPU)."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords = ["pixel-art", "sdxl", "stable-diffusion", "gamedev", "image"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[[bin]]
name = "pixl"
path = "src/main.rs"

[features]
# Build the candle/Metal generation backend (macOS) + its progress/pipeline deps.
# `gen` pulls in `view` so the default install gets the live gallery; the
# standalone `pixl view <dir>` works with just `view` (no GPU/ML).
default = ["gen"]
gen = ["pixl-gen/gen", "dep:indicatif", "dep:crossbeam-channel", "dep:ctrlc", "dep:serde_json", "view"]
cuda = ["gen", "pixl-gen/cuda"]
metal = ["gen"]
view = ["dep:ratatui", "dep:ratatui-image", "dep:crossterm"]

[dependencies]
pixl-pixelize.workspace = true
pixl-gen.workspace = true
image.workspace = true
rayon.workspace = true
clap.workspace = true
anyhow.workspace = true
indicatif = { version = "0.18", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
ctrlc = { version = "3", optional = true }
serde_json = { version = "1", optional = true }
ratatui = { version = "0.30", optional = true }
ratatui-image = { version = "11", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
